--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /api/.vs/api/FileContentIndex
 /api/.vs/api/v17
 /api/api.csproj.user
+/api/obj/Debug/net8.0/api.AssemblyInfo.cs
+/api/obj/Debug/net8.0/api.AssemblyInfoInputs.cache
